pamc/src/tests/sample_code/should_fail/empty_parens/empty_forall_params.ph
type U {
    .U: U,
}

let foo = forall() { U };
